validation rework